<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileCloud</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_upload">上传</string>
    <string name="btn_download">下载</string>
    <string name="upload_label">本地地址</string>
    <string name="upload_hint">本地文件地址</string>
    <string name="download_label">远程地址</string>
    <string name="download_hint">远程文件地址</string>

</resources>