<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Upload label. -->

    <TextView
        android:id="@+id/upload_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:text="@string/upload_label" />
    <!-- Upload url input box. -->

    <EditText
        android:id="@+id/upload_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/upload_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/upload_label"
        android:hint="@string/upload_hint"
        android:inputType="textUri" />
    <!-- Upload button. -->

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/upload_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/upload_url"
        android:text="@string/btn_upload" />
    <!-- Download label. -->

    <TextView
        android:id="@+id/download_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/upload_label"
        android:layout_marginTop="30dp"
        android:text="@string/download_label" />
    <!-- Download url input box. -->

    <EditText
        android:id="@+id/download_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/download_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/download_label"
        android:hint="@string/download_hint"
        android:inputType="textUri" />
    <!-- Download button. -->

    <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/download_label"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/download_url"
        android:text="@string/btn_download" />

</RelativeLayout>